--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "antd": "^4.19.5",
+    "bootstrap": "^5.1.3",
     "next": "^12.1.5",
     "react": "^18.0.0",
     "react-dom": "^18.0.0"
