feat: handle mongoose connectionaxios request when register submit occurs

--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,2 @@
 PORT=8000
+DATABASE=mongodb+srv://erkutos25:Technology.*-208.*-@nodeexpressprojects.ysx5e.mongodb.net/MERN?retryWrites=true&w=majority
