--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "antd": "^4.20.0",
+    "axios": "^0.27.0",
+    "bootstrap": "^5.1.3",
     "next": "^12.1.5",
     "react": "^18.0.0",
     "react-dom": "^18.0.0"
