--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,3 @@
 PORT=8000
 DATABASE=mongodb+srv://erkutos25:Technology.*-208.*-@nodeexpressprojects.ysx5e.mongodb.net/MERN?retryWrites=true&w=majority
+JWT_SECRET=SDLGG8E9G34G3984GJ389G39G39GJ
